--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "y-py" %}
 {% set version = "0.6.0" %}
+{% set maturin_version = ">=0.14,<0.15" %}
 
 package:
   name: {{ name }}
@@ -12,19 +13,19 @@ source:
 build:
   number: 0
   script:
-    - {{ PYTHON }} -m pip install . -vv
+    - {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
     - cargo-bundle-licenses --format yaml --output THIRDPARTY.yml
 
 requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - maturin >=0.13,<0.14                   # [build_platform != target_platform]
+    - maturin {{ maturin_version }}          # [build_platform != target_platform]
     - {{ compiler('c') }}
     - {{ compiler('rust') }}
     - cargo-bundle-licenses
   host:
-    - maturin >=0.13,<0.14
+    - maturin {{ maturin_version }}
     - pip
     - python
   run:
