--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,9 +1,8 @@
-{% set name = "y-py" %}
 {% set version = "0.6.0" %}
 {% set maturin_version = ">=0.14,<0.15" %}
 
 package:
-  name: {{ name }}
+  name: y-py
   version: {{ version }}
 
 source:
@@ -11,7 +10,7 @@ source:
   sha256: 46836169f7dc2957df8513cfe4bc2009175b3a473e630af421a8e75ee1c48f98
 
 build:
-  number: 0
+  number: 1
   script:
     - {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
     - cargo-bundle-licenses --format yaml --output THIRDPARTY.yml
